Fixes based on sonarlint inspections